--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,7 @@ collections:
 
 ### Disqus ###
 disqus:
-  shortname: your-short-name-disqus                     # Your website Shortname on disqus
+  shortname: krishnanbharatula                    # Your website Shortname on disqus
 
 
 ### Analytics ###
